2018-07-27  David Fenton  <david_fenton@apple.com>

        LayoutTest http/tests/cache/disk-cache/disk-cache-204-status-code.html is a flaky failure.
        https://bugs.webkit.org/show_bug.cgi?id=162685

        Unreviewed test gardening, marked as flaky on iOS Release.

        * platform/ios-wk2/TestExpectations:

2018-07-27  Simon Fraser  <simon.fraser@apple.com>

        Be more conservative with compositing layer creation when memory is low
        https://bugs.webkit.org/show_bug.cgi?id=187866
        rdar://problem/42366345

        Reviewed by Zalan Bujtas.
        
        * compositing/layer-creation/compositing-policy-expected.txt: Added.
        * compositing/layer-creation/compositing-policy.html: Added.

2018-07-27  Zalan Bujtas  <zalan@apple.com>

        [WK1] ASSERTION FAILED: renderer().repaintLayoutRects().m_repaintRect == renderer().clippedOverflowRectForRepaint(renderer().containerForRepaint()) in WebCore::RenderLayer::updateLayerPositionsAfterScroll
        https://bugs.webkit.org/show_bug.cgi?id=188122
        <rdar://problem/42584790>

        Reviewed by Simon Fraser.

        * platform/mac-wk1/TestExpectations:

2018-07-27  Michael Catanzaro  <mcatanzaro@igalia.com>

        Unreviewed GTK test gardening

        * TestExpectations:
        * platform/gtk/TestExpectations:

2018-07-27  Basuke Suzuki  <Basuke.Suzuki@sony.com>

        [Curl] Crash on synchronous request via ResourceHandle.
        https://bugs.webkit.org/show_bug.cgi?id=188033

        Reviewed by Alex Christensen.

        bug/188033 Crash sync xmlhttprequest

        * platform/wincairo/TestExpectations:

2018-07-27  David Fenton  <david_fenton@apple.com>

        Layout Test tiled-drawing/scrolling/fixed/four-bars-zoomed.html is flaky text failure.
        https://bugs.webkit.org/show_bug.cgi?id=188096

        Unreviewed test gardening, marked test as flaky.

        * platform/mac-wk2/TestExpectations:

2018-07-27  Basuke Suzuki  <Basuke.Suzuki@sony.com>
