@@ -86,7 +86,7 @@
         "expected": {"all": {"slow": true}},
         "subtests": {
             "/webkit/WebKitWebInspectorServer/test-page-list": {
-                "expected": {"all": {"status": ["FAIL", "PASS"], "bug": "webkit.org/b/188115"}
+                "expected": {"all": {"status": ["FAIL", "PASS"], "bug": "webkit.org/b/188115"}}
             }
         }
     },
