@@ -1,3 +1,9 @@
+2018-07-27  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        More unreviewed GTK test gardening
+
+        * TestWebKitAPI/glib/TestExpectations.json:
+
 2018-07-27  Simon Fraser  <simon.fraser@apple.com>
 
         Be more conservative with compositing layer creation when memory is low
